Fixed warnings annotated by IDE and/or code analysis tool